# NeuralNet-Engine-Cpp

./: CMakeLists.txt  README.md  desktop.ini
src/: main.cpp
src/engine/: LeakyRelu.cpp  ReLuLayer.cpp
